# utem

hairulUtem/shibata/ErNorMin/: Makefile  README  ccs_format.c  ccs_format.h  libmumps-4.10.0.txt  main  main-seq  main.c  makelog.txt  mynotes.txt  nl_solver_topology.c  testcompile  topology_opt.h
hairulUtem/shibata/ErNorMin/Input_data/: PARAM  README  renew_new_l1.bdf  renew_new_t12.bdf  renew_t11.bdf  renew_t12.bdf
hairulUtem/shibata/ErNorMin/Output_data/: reference_points.bdf
hairulUtem/shibata/ErNorMin/azlib/branches/AZLIB_1_0/azlib0/: Makefile  Makefile.win  bin_io.c  bin_io.h  idc.c  integration.c  mail_utl.c  mail_utl.h  math_utl.c  math_utl.h  pokecom.c  pokecom.h  rc.c  rc.h  string_utl.c  string_utl.h
hairulUtem/shibata/ErNorMin/azlib/branches/AZLIB_1_0/azlibADV/: Makefile  adv_component.c  adv_component.h
hairulUtem/shibata/ErNorMin/azlib/branches/AZLIB_1_0/azlibFEM/: Makefile  Makefile.win  ansys_component.c  ansys_component.h  avs_utl.c  avs_utl.h  dxf_utl.c  dxf_utl.h  eigen_solver.c  element_volume.c  eps_utl.c  eps_utl.h  extract_surface.c  fem_renumber.c  fem_solver.c  fem_solver.h  fem_solver_6dof.c  fem_solver_shell.c  fem_struct.c  fem_struct.h  fem_struct_binio.c  fem_struct_print.c  fem_utl.c  flow_solver.c  interpolation.c  nl_solver.c  nonzero_cg.c  nonzero_cg.h  nst_blk_component.c  nst_blk_llio.c  nst_component.h  nst_f06_component.c  nst_pch_component.c  optimization_utl.c  optimization_utl.h  pressure_force.c  sky_cholesky.c  sky_cholesky.h  sky_crout.c  sky_crout.h  (+4 more)
hairulUtem/shibata/ErNorMin/azlib/branches/AZLIB_1_0/azlibGL/: Makefile  Makefile.win  glut_utl.c  glut_utl.h  gtk_analysis.c  gtk_graph.c  gtk_icons.h  gtk_model_view.c  gtk_utl.c  gtk_utl.h  gtkgl_utl.c
hairulUtem/shibata/ErNorMin/azlib/branches/AZLIB_1_0/azlibPIX/: Makefile  Makefile.win  avs_field_utl.c  bmp_utl.c  dicom_utl.c  dicom_utl.h  graphic_utl.c  graphic_utl.h  tiff_utl.c
hairulUtem/shibata/ErNorMin/azlib/tags/STABLE-2006-01-10/: Makefile
hairulUtem/shibata/ErNorMin/azlib/tags/STABLE-2016-01-04/: Makefile  README.txt
hairulUtem/shibata/ErNorMin/azlib/tags/STABLE-2016-01-04/doc/: element.eps
hairulUtem/shibata/ErNorMin/azlib/trunk/: Makefile  README.txt
hairulUtem/shibata/ErNorMin/azlib/trunk/doc/Memo/: 64Bit.txt  Cache.txt  Color_print.txt
hairulUtem/shibata/ErNorMin/azlib/trunk/doc/Subversion/: memo.txt
hairulUtem/shibata/ErNorMin/azlib/trunk/doc/VisualStudio/: VisualStudio2005.txt
hairulUtem/shibata/ErNorMin/azlib/trunk/doc/reference/: Makefile  README.txt  TODO  azlib-manual.tex  base.tex  fem.tex  gui.tex  image.tex  main.tex  mathematics.tex
hairulUtem/shibata/ErNorMin/azlib/trunk/examples/color_print/: README.txt  color_print.c
hairulUtem/shibata/ErNorMin/azlib/trunk/examples/fem_solve/: Makefile.win  clean.bat  fem_solve.c  file_io.h
hairulUtem/shibata/ErNorMin/azlib/trunk/examples/fem_view/: Makefile  README.txt  bar.bdf  main.c  run.sh
hairulUtem/shibata/ErNorMin/azlib/trunk/examples/trac_method/: Makefile.win  PARAM_bodyless  bar.bdf  bar_rest.bdf  clean.sh  run.bat
hairulUtem/shibata/ErNorMin/azlib/trunk/projects/visualc6/: base.dsp  fem.dsp  image.dsp
hairulUtem/shibata/ErNorMin/azlib/trunk/projects/visualc8/: fem.vcproj
hairulUtem/shibata/ErNorMin/azlib/trunk/src/: README.txt
hairulUtem/shibata/ErNorMin/azlib/trunk/src/base/: TODO  base.h  bin_io.c  bin_io.h  data_model.c  data_model.h  idc.c  list.c  list.h  log_printf.c  macros.h  mail_utl.c  memory_manager.c  messages.h  rc.c  rc.h  scratch_io.h  string_utl.c  string_utl.h  time_utl.c  time_utl.h  wrapper_64.h
hairulUtem/shibata/ErNorMin/azlib/trunk/src/base/cmake/: CMakeLists.txt
hairulUtem/shibata/ErNorMin/azlib/trunk/src/fem/: Makefile.win  adv_component.h  ansys_component.c  dxf_utl.h  eigen_solver.c  element_volume.c  eps_utl.h  extract_surface.c  face_edge_table.c  fem.h  fem_renumber.c  fem_solver.c  fem_solver.h  fem_solver_6dof.c  fem_solver_shell.c  fem_struct.c  fem_struct.h  fem_struct_print.c  fem_utl.c  integration.c  interpolation.c  matrix_db_amls.c  nl_solver.c  nst_blk_component.c  nst_f06_component.c  optimization_utl.c  optimization_utl.h  pressure_force.c  sky_cholesky.c  (+3 more)
hairulUtem/shibata/ErNorMin/azlib/trunk/src/fem/cmake/: CMakeLists.txt
hairulUtem/shibata/ErNorMin/azlib/trunk/src/gui/cmake/: CMakeLists.txt
hairulUtem/shibata/ErNorMin/azlib/trunk/src/image/cmake/: CMakeLists.txt
hairulUtem/shibata/ErNorMin/azlib/trunk/src/mathematics/cmake/: CMakeLists.txt
hairulUtem/shibata/ErNorMin/lib/: libmumps-seq-4.10.0.txt
hairulUtem/shibata/ErNorMin/lib/MUMPS_4.10.0/: Makefile  Makefile.old  Makefile.original
hairulUtem/shibata/ErNorMin/lib/MUMPS_4.10.0/libseq/: elapse.d  mpic.d
hairulUtem/shibata/ErNorMin/lib/MUMPS_4.10.0/src/: Makefile  Makefile.backup  Makefile.bak  cmumps_comm_buffer.mod  cmumps_load.mod  cmumps_ooc.mod  cmumps_ooc_buffer.mod  cmumps_parallel_analysis.mod  cmumps_struc_def.mod  dmumps_comm_buffer.mod  dmumps_load.mod  dmumps_ooc.mod  dmumps_ooc_buffer.mod  dmumps_parallel_analysis.mod  dmumps_struc_def.mod  mumps_ooc_common.mod  mumps_sol_es.mod  mumps_static_mapping.mod  smumps_comm_buffer.mod  smumps_load.mod  smumps_ooc.mod  smumps_ooc_buffer.mod  smumps_parallel_analysis.mod  smumps_struc_def.mod  tools_common.mod  zmumps_comm_buffer.mod  zmumps_load.mod  zmumps_ooc.mod  zmumps_ooc_buffer.mod  zmumps_parallel_analysis.mod  zmumps_struc_def.mod
(+394 files in other folders)
